--- a/article/linux/commond/服务器搭建.md
+++ b/article/linux/commond/服务器搭建.md
@@ -12,3 +12,14 @@
 ##### 2.下载tomcat安装 
 
 ##### 3.安装nginx  apt-get nginx
+
+##### 4.安装mysql & 配置
+> **4.1** 安装apt-get install mysql-server
+> **4.2** 配置远程访问
+>> *4.2.1* 取消绑定 vim /etc/mysql/my.cnf 注释bind-address =127.0.0.1
+>> *4.2.2* 分配权限 grant all on yourdb.* to yourUsername@yourHost identified by "yourPassword";
+ flush privileges;     //使权限立刻生效
+
+> 重启mysql服务 service mysql restart
+> 开启mysql服务 service mysql start
+> 关闭mysql服务 service mysql stop
