--- a/article/linux/commond/服务器搭建.md
+++ b/article/linux/commond/服务器搭建.md
@@ -23,3 +23,6 @@
 > 重启mysql服务 service mysql restart
 > 开启mysql服务 service mysql start
 > 关闭mysql服务 service mysql stop
+
+##### 5.安装redis & 配置
+> **5.1** 安装apt-get install redis-server
